Add rust, swap tabs and buffer move keys and fix some issue

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,5 +11,8 @@
 
   // JS and Typescript
   "typescript.suggestionActions.enabled": false,
-  "javascript.suggestionActions.enabled": false
+  "javascript.suggestionActions.enabled": false,
+
+  // Prettier
+  "prettier.bracketSpacing": true
 }
