Customize fzf and add preview for Rg

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/plugged
-/session/*
-/undodir/*
-/bundle
-/cache/bujo/*
-/node_modules
+plugged
+session/*
+undodir/*
+bundle
+cache/bujo/*
+node_modules
 .netrwhist
